fix vertical align

--- a/app/blocks/form/form.styl
+++ b/app/blocks/form/form.styl
@@ -227,6 +227,9 @@
     ^[0]__section &:last-child
       margin-bottom 0
 
+    &_valign_top
+      align-items flex-start
+
   &__item
     position relative
     margin 0 15px 10px
